tests/snapshots/tests__command__hide_possible_values.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_84c9ada3'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--mode[0m <mode>  
  [1m-h[0m, [1m--help[0m         Print help
EOF_84c9ada3
exit 0
