tests/snapshots/tests__command__infer_subcommands.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_arg1='true'
