tests/snapshots/tests__command__long_flag.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='sync'
claptrap_sync_search='true'
