tests/snapshots/tests__command__multicall_busybox-1.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='busybox::true'
