tests/snapshots/tests__command__multicall_error.snap
---
source: tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_c760771c'
[1m[31merror:[0m unexpected argument '[33mdnsdomainname[0m' found

[1m[4mUsage:[0m [1mhostname[0m

For more information, try '[1m--help[0m'.
EOF_c760771c
exit 1
